# cuemeet-google-bot

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  UPGRADE.md  app.py  buildspec-staging.yml  buildspec.yml  entrypoint.sh  logger.py  monitoring.py  pulse-client.conf  pulse-daemon.conf  pyproject.toml  utils.py
config/: settings.py
google_meet/: bot.py  utils.py
transcript_extension/: content.js  manifest.json
